parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> command
Rule 1     command -> order command
Rule 2     command -> done command
Rule 3     command -> order
Rule 4     command -> menu
Rule 5     command -> exit
Rule 6     command -> done
Rule 7     order -> DRINK option
Rule 8     option -> quantity Doption size
Rule 9     option -> quantity size Doption
Rule 10    option -> Doption quantity size
Rule 11    option -> Doption size quantity
Rule 12    option -> size quantity Doption
Rule 13    option -> size Doption quantity
Rule 14    quantity -> NUMBER
Rule 15    quantity -> empty
Rule 16    size -> SIZE
Rule 17    size -> empty
Rule 18    Doption -> Soption Ioption
Rule 19    Doption -> Ioption Soption
Rule 20    Soption -> Slevel
Rule 21    Soption -> empty
Rule 22    Slevel -> Setlevel SUGAR
Rule 23    Ioption -> Ilevel
Rule 24    Ioption -> empty
Rule 25    Ilevel -> Setlevel ICE
Rule 26    Setlevel -> level
Rule 27    Setlevel -> PERCENT
Rule 28    level -> LEVEL
Rule 29    menu -> MENU
Rule 30    exit -> EXIT
Rule 31    done -> DONE
Rule 32    empty -> <empty>

Terminals, with rules where they appear

DONE                 : 31
DRINK                : 7
EXIT                 : 30
ICE                  : 25
LEVEL                : 28
MENU                 : 29
NUMBER               : 14
PERCENT              : 27
SIZE                 : 16
SUGAR                : 22
error                : 

Nonterminals, with rules where they appear

Doption              : 8 9 10 11 12 13
Ilevel               : 23
Ioption              : 18 19
Setlevel             : 22 25
Slevel               : 20
Soption              : 18 19
command              : 1 2 0
done                 : 2 6
empty                : 15 17 21 24
exit                 : 5
level                : 26
menu                 : 4
option               : 7
order                : 1 3
quantity             : 8 9 10 11 12 13
size                 : 8 9 10 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . order command
    (2) command -> . done command
    (3) command -> . order
    (4) command -> . menu
    (5) command -> . exit
    (6) command -> . done
    (7) order -> . DRINK option
    (31) done -> . DONE
    (29) menu -> . MENU
    (30) exit -> . EXIT

    DRINK           shift and go to state 6
    DONE            shift and go to state 7
    MENU            shift and go to state 8
    EXIT            shift and go to state 9

    command                        shift and go to state 1
    order                          shift and go to state 2
    done                           shift and go to state 3
    menu                           shift and go to state 4
    exit                           shift and go to state 5

state 1

    (0) S' -> command .



state 2

    (1) command -> order . command
    (3) command -> order .
    (1) command -> . order command
    (2) command -> . done command
    (3) command -> . order
    (4) command -> . menu
    (5) command -> . exit
    (6) command -> . done
    (7) order -> . DRINK option
    (31) done -> . DONE
    (29) menu -> . MENU
    (30) exit -> . EXIT

    $end            reduce using rule 3 (command -> order .)
    DRINK           shift and go to state 6
    DONE            shift and go to state 7
    MENU            shift and go to state 8
    EXIT            shift and go to state 9

    order                          shift and go to state 2
    command                        shift and go to state 10
    done                           shift and go to state 3
    menu                           shift and go to state 4
    exit                           shift and go to state 5

state 3

    (2) command -> done . command
    (6) command -> done .
    (1) command -> . order command
    (2) command -> . done command
    (3) command -> . order
    (4) command -> . menu
    (5) command -> . exit
    (6) command -> . done
    (7) order -> . DRINK option
    (31) done -> . DONE
    (29) menu -> . MENU
    (30) exit -> . EXIT

    $end            reduce using rule 6 (command -> done .)
    DRINK           shift and go to state 6
    DONE            shift and go to state 7
    MENU            shift and go to state 8
    EXIT            shift and go to state 9

    done                           shift and go to state 3
    command                        shift and go to state 11
    order                          shift and go to state 2
    menu                           shift and go to state 4
    exit                           shift and go to state 5

state 4

    (4) command -> menu .

    $end            reduce using rule 4 (command -> menu .)


state 5

    (5) command -> exit .

    $end            reduce using rule 5 (command -> exit .)


state 6

    (7) order -> DRINK . option
    (8) option -> . quantity Doption size
    (9) option -> . quantity size Doption
    (10) option -> . Doption quantity size
    (11) option -> . Doption size quantity
    (12) option -> . size quantity Doption
    (13) option -> . size Doption quantity
    (14) quantity -> . NUMBER
    (15) quantity -> . empty
    (18) Doption -> . Soption Ioption
    (19) Doption -> . Ioption Soption
    (16) size -> . SIZE
    (17) size -> . empty
    (32) empty -> .
    (20) Soption -> . Slevel
    (21) Soption -> . empty
    (23) Ioption -> . Ilevel
    (24) Ioption -> . empty
    (22) Slevel -> . Setlevel SUGAR
    (25) Ilevel -> . Setlevel ICE
    (26) Setlevel -> . level
    (27) Setlevel -> . PERCENT
    (28) level -> . LEVEL

  ! shift/reduce conflict for SIZE resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for PERCENT resolved as shift
  ! shift/reduce conflict for LEVEL resolved as shift
    NUMBER          shift and go to state 16
    SIZE            shift and go to state 20
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)
    PERCENT         shift and go to state 25
    LEVEL           shift and go to state 26

  ! SIZE            [ reduce using rule 32 (empty -> .) ]
  ! PERCENT         [ reduce using rule 32 (empty -> .) ]
  ! LEVEL           [ reduce using rule 32 (empty -> .) ]
  ! NUMBER          [ reduce using rule 32 (empty -> .) ]

    option                         shift and go to state 12
    quantity                       shift and go to state 13
    Doption                        shift and go to state 14
    size                           shift and go to state 15
    empty                          shift and go to state 17
    Soption                        shift and go to state 18
    Ioption                        shift and go to state 19
    Slevel                         shift and go to state 21
    Ilevel                         shift and go to state 22
    Setlevel                       shift and go to state 23
    level                          shift and go to state 24

state 7

    (31) done -> DONE .

    DRINK           reduce using rule 31 (done -> DONE .)
    DONE            reduce using rule 31 (done -> DONE .)
    MENU            reduce using rule 31 (done -> DONE .)
    EXIT            reduce using rule 31 (done -> DONE .)
    $end            reduce using rule 31 (done -> DONE .)


state 8

    (29) menu -> MENU .

    $end            reduce using rule 29 (menu -> MENU .)


state 9

    (30) exit -> EXIT .

    $end            reduce using rule 30 (exit -> EXIT .)


state 10

    (1) command -> order command .

    $end            reduce using rule 1 (command -> order command .)


state 11

    (2) command -> done command .

    $end            reduce using rule 2 (command -> done command .)


state 12

    (7) order -> DRINK option .

    DRINK           reduce using rule 7 (order -> DRINK option .)
    DONE            reduce using rule 7 (order -> DRINK option .)
    MENU            reduce using rule 7 (order -> DRINK option .)
    EXIT            reduce using rule 7 (order -> DRINK option .)
    $end            reduce using rule 7 (order -> DRINK option .)


state 13

    (8) option -> quantity . Doption size
    (9) option -> quantity . size Doption
    (18) Doption -> . Soption Ioption
    (19) Doption -> . Ioption Soption
    (16) size -> . SIZE
    (17) size -> . empty
    (20) Soption -> . Slevel
    (21) Soption -> . empty
    (23) Ioption -> . Ilevel
    (24) Ioption -> . empty
    (32) empty -> .
    (22) Slevel -> . Setlevel SUGAR
    (25) Ilevel -> . Setlevel ICE
    (26) Setlevel -> . level
    (27) Setlevel -> . PERCENT
    (28) level -> . LEVEL

  ! shift/reduce conflict for SIZE resolved as shift
  ! shift/reduce conflict for PERCENT resolved as shift
  ! shift/reduce conflict for LEVEL resolved as shift
    SIZE            shift and go to state 20
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)
    PERCENT         shift and go to state 25
    LEVEL           shift and go to state 26

  ! PERCENT         [ reduce using rule 32 (empty -> .) ]
  ! LEVEL           [ reduce using rule 32 (empty -> .) ]
  ! SIZE            [ reduce using rule 32 (empty -> .) ]

    Doption                        shift and go to state 27
    size                           shift and go to state 28
    Soption                        shift and go to state 18
    Ioption                        shift and go to state 19
    empty                          shift and go to state 29
    Slevel                         shift and go to state 21
    Ilevel                         shift and go to state 22
    Setlevel                       shift and go to state 23
    level                          shift and go to state 24

state 14

    (10) option -> Doption . quantity size
    (11) option -> Doption . size quantity
    (14) quantity -> . NUMBER
    (15) quantity -> . empty
    (16) size -> . SIZE
    (17) size -> . empty
    (32) empty -> .

  ! shift/reduce conflict for SIZE resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    NUMBER          shift and go to state 16
    SIZE            shift and go to state 20
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)

  ! SIZE            [ reduce using rule 32 (empty -> .) ]
  ! NUMBER          [ reduce using rule 32 (empty -> .) ]

    quantity                       shift and go to state 30
    size                           shift and go to state 31
    empty                          shift and go to state 32

state 15

    (12) option -> size . quantity Doption
    (13) option -> size . Doption quantity
    (14) quantity -> . NUMBER
    (15) quantity -> . empty
    (18) Doption -> . Soption Ioption
    (19) Doption -> . Ioption Soption
    (32) empty -> .
    (20) Soption -> . Slevel
    (21) Soption -> . empty
    (23) Ioption -> . Ilevel
    (24) Ioption -> . empty
    (22) Slevel -> . Setlevel SUGAR
    (25) Ilevel -> . Setlevel ICE
    (26) Setlevel -> . level
    (27) Setlevel -> . PERCENT
    (28) level -> . LEVEL

  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for PERCENT resolved as shift
  ! shift/reduce conflict for LEVEL resolved as shift
    NUMBER          shift and go to state 16
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)
    PERCENT         shift and go to state 25
    LEVEL           shift and go to state 26

  ! PERCENT         [ reduce using rule 32 (empty -> .) ]
  ! LEVEL           [ reduce using rule 32 (empty -> .) ]
  ! NUMBER          [ reduce using rule 32 (empty -> .) ]

    quantity                       shift and go to state 33
    Doption                        shift and go to state 34
    empty                          shift and go to state 35
    Soption                        shift and go to state 18
    Ioption                        shift and go to state 19
    Slevel                         shift and go to state 21
    Ilevel                         shift and go to state 22
    Setlevel                       shift and go to state 23
    level                          shift and go to state 24

state 16

    (14) quantity -> NUMBER .

    SIZE            reduce using rule 14 (quantity -> NUMBER .)
    PERCENT         reduce using rule 14 (quantity -> NUMBER .)
    LEVEL           reduce using rule 14 (quantity -> NUMBER .)
    DRINK           reduce using rule 14 (quantity -> NUMBER .)
    DONE            reduce using rule 14 (quantity -> NUMBER .)
    MENU            reduce using rule 14 (quantity -> NUMBER .)
    EXIT            reduce using rule 14 (quantity -> NUMBER .)
    $end            reduce using rule 14 (quantity -> NUMBER .)


state 17

    (15) quantity -> empty .
    (17) size -> empty .
    (21) Soption -> empty .
    (24) Ioption -> empty .

  ! reduce/reduce conflict for PERCENT resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for LEVEL resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for DRINK resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for DONE resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for MENU resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for EXIT resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for PERCENT resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for LEVEL resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for NUMBER resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for SIZE resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for DRINK resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for DONE resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for MENU resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for EXIT resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for PERCENT resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for LEVEL resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for NUMBER resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for SIZE resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for DRINK resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for DONE resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for MENU resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for EXIT resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 15 (quantity -> empty .)
    SIZE            reduce using rule 15 (quantity -> empty .)
    PERCENT         reduce using rule 15 (quantity -> empty .)
    LEVEL           reduce using rule 15 (quantity -> empty .)
    DRINK           reduce using rule 15 (quantity -> empty .)
    DONE            reduce using rule 15 (quantity -> empty .)
    MENU            reduce using rule 15 (quantity -> empty .)
    EXIT            reduce using rule 15 (quantity -> empty .)
    $end            reduce using rule 15 (quantity -> empty .)
    NUMBER          reduce using rule 17 (size -> empty .)

  ! PERCENT         [ reduce using rule 17 (size -> empty .) ]
  ! LEVEL           [ reduce using rule 17 (size -> empty .) ]
  ! DRINK           [ reduce using rule 17 (size -> empty .) ]
  ! DONE            [ reduce using rule 17 (size -> empty .) ]
  ! MENU            [ reduce using rule 17 (size -> empty .) ]
  ! EXIT            [ reduce using rule 17 (size -> empty .) ]
  ! $end            [ reduce using rule 17 (size -> empty .) ]
  ! PERCENT         [ reduce using rule 21 (Soption -> empty .) ]
  ! LEVEL           [ reduce using rule 21 (Soption -> empty .) ]
  ! NUMBER          [ reduce using rule 21 (Soption -> empty .) ]
  ! SIZE            [ reduce using rule 21 (Soption -> empty .) ]
  ! DRINK           [ reduce using rule 21 (Soption -> empty .) ]
  ! DONE            [ reduce using rule 21 (Soption -> empty .) ]
  ! MENU            [ reduce using rule 21 (Soption -> empty .) ]
  ! EXIT            [ reduce using rule 21 (Soption -> empty .) ]
  ! $end            [ reduce using rule 21 (Soption -> empty .) ]
  ! PERCENT         [ reduce using rule 24 (Ioption -> empty .) ]
  ! LEVEL           [ reduce using rule 24 (Ioption -> empty .) ]
  ! NUMBER          [ reduce using rule 24 (Ioption -> empty .) ]
  ! SIZE            [ reduce using rule 24 (Ioption -> empty .) ]
  ! DRINK           [ reduce using rule 24 (Ioption -> empty .) ]
  ! DONE            [ reduce using rule 24 (Ioption -> empty .) ]
  ! MENU            [ reduce using rule 24 (Ioption -> empty .) ]
  ! EXIT            [ reduce using rule 24 (Ioption -> empty .) ]
  ! $end            [ reduce using rule 24 (Ioption -> empty .) ]


state 18

    (18) Doption -> Soption . Ioption
    (23) Ioption -> . Ilevel
    (24) Ioption -> . empty
    (25) Ilevel -> . Setlevel ICE
    (32) empty -> .
    (26) Setlevel -> . level
    (27) Setlevel -> . PERCENT
    (28) level -> . LEVEL

    NUMBER          reduce using rule 32 (empty -> .)
    SIZE            reduce using rule 32 (empty -> .)
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)
    PERCENT         shift and go to state 25
    LEVEL           shift and go to state 26

    Ioption                        shift and go to state 36
    Ilevel                         shift and go to state 22
    empty                          shift and go to state 37
    Setlevel                       shift and go to state 38
    level                          shift and go to state 24

state 19

    (19) Doption -> Ioption . Soption
    (20) Soption -> . Slevel
    (21) Soption -> . empty
    (22) Slevel -> . Setlevel SUGAR
    (32) empty -> .
    (26) Setlevel -> . level
    (27) Setlevel -> . PERCENT
    (28) level -> . LEVEL

    NUMBER          reduce using rule 32 (empty -> .)
    SIZE            reduce using rule 32 (empty -> .)
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)
    PERCENT         shift and go to state 25
    LEVEL           shift and go to state 26

    Soption                        shift and go to state 39
    Slevel                         shift and go to state 21
    empty                          shift and go to state 40
    Setlevel                       shift and go to state 41
    level                          shift and go to state 24

state 20

    (16) size -> SIZE .

    NUMBER          reduce using rule 16 (size -> SIZE .)
    PERCENT         reduce using rule 16 (size -> SIZE .)
    LEVEL           reduce using rule 16 (size -> SIZE .)
    DRINK           reduce using rule 16 (size -> SIZE .)
    DONE            reduce using rule 16 (size -> SIZE .)
    MENU            reduce using rule 16 (size -> SIZE .)
    EXIT            reduce using rule 16 (size -> SIZE .)
    $end            reduce using rule 16 (size -> SIZE .)


state 21

    (20) Soption -> Slevel .

    PERCENT         reduce using rule 20 (Soption -> Slevel .)
    LEVEL           reduce using rule 20 (Soption -> Slevel .)
    NUMBER          reduce using rule 20 (Soption -> Slevel .)
    SIZE            reduce using rule 20 (Soption -> Slevel .)
    DRINK           reduce using rule 20 (Soption -> Slevel .)
    DONE            reduce using rule 20 (Soption -> Slevel .)
    MENU            reduce using rule 20 (Soption -> Slevel .)
    EXIT            reduce using rule 20 (Soption -> Slevel .)
    $end            reduce using rule 20 (Soption -> Slevel .)


state 22

    (23) Ioption -> Ilevel .

    PERCENT         reduce using rule 23 (Ioption -> Ilevel .)
    LEVEL           reduce using rule 23 (Ioption -> Ilevel .)
    NUMBER          reduce using rule 23 (Ioption -> Ilevel .)
    SIZE            reduce using rule 23 (Ioption -> Ilevel .)
    DRINK           reduce using rule 23 (Ioption -> Ilevel .)
    DONE            reduce using rule 23 (Ioption -> Ilevel .)
    MENU            reduce using rule 23 (Ioption -> Ilevel .)
    EXIT            reduce using rule 23 (Ioption -> Ilevel .)
    $end            reduce using rule 23 (Ioption -> Ilevel .)


state 23

    (22) Slevel -> Setlevel . SUGAR
    (25) Ilevel -> Setlevel . ICE

    SUGAR           shift and go to state 42
    ICE             shift and go to state 43


state 24

    (26) Setlevel -> level .

    SUGAR           reduce using rule 26 (Setlevel -> level .)
    ICE             reduce using rule 26 (Setlevel -> level .)


state 25

    (27) Setlevel -> PERCENT .

    SUGAR           reduce using rule 27 (Setlevel -> PERCENT .)
    ICE             reduce using rule 27 (Setlevel -> PERCENT .)


state 26

    (28) level -> LEVEL .

    SUGAR           reduce using rule 28 (level -> LEVEL .)
    ICE             reduce using rule 28 (level -> LEVEL .)


state 27

    (8) option -> quantity Doption . size
    (16) size -> . SIZE
    (17) size -> . empty
    (32) empty -> .

    SIZE            shift and go to state 20
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)

    size                           shift and go to state 44
    empty                          shift and go to state 45

state 28

    (9) option -> quantity size . Doption
    (18) Doption -> . Soption Ioption
    (19) Doption -> . Ioption Soption
    (20) Soption -> . Slevel
    (21) Soption -> . empty
    (23) Ioption -> . Ilevel
    (24) Ioption -> . empty
    (22) Slevel -> . Setlevel SUGAR
    (32) empty -> .
    (25) Ilevel -> . Setlevel ICE
    (26) Setlevel -> . level
    (27) Setlevel -> . PERCENT
    (28) level -> . LEVEL

  ! shift/reduce conflict for PERCENT resolved as shift
  ! shift/reduce conflict for LEVEL resolved as shift
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)
    PERCENT         shift and go to state 25
    LEVEL           shift and go to state 26

  ! PERCENT         [ reduce using rule 32 (empty -> .) ]
  ! LEVEL           [ reduce using rule 32 (empty -> .) ]

    Doption                        shift and go to state 46
    Soption                        shift and go to state 18
    Ioption                        shift and go to state 19
    Slevel                         shift and go to state 21
    empty                          shift and go to state 47
    Ilevel                         shift and go to state 22
    Setlevel                       shift and go to state 23
    level                          shift and go to state 24

state 29

    (17) size -> empty .
    (21) Soption -> empty .
    (24) Ioption -> empty .

  ! reduce/reduce conflict for PERCENT resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for LEVEL resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for DRINK resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for DONE resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for MENU resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for EXIT resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for PERCENT resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for LEVEL resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for SIZE resolved using rule 21 (Soption -> empty .)
  ! reduce/reduce conflict for DRINK resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for DONE resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for MENU resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for EXIT resolved using rule 17 (size -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 17 (size -> empty .)
    PERCENT         reduce using rule 17 (size -> empty .)
    LEVEL           reduce using rule 17 (size -> empty .)
    DRINK           reduce using rule 17 (size -> empty .)
    DONE            reduce using rule 17 (size -> empty .)
    MENU            reduce using rule 17 (size -> empty .)
    EXIT            reduce using rule 17 (size -> empty .)
    $end            reduce using rule 17 (size -> empty .)
    SIZE            reduce using rule 21 (Soption -> empty .)

  ! PERCENT         [ reduce using rule 21 (Soption -> empty .) ]
  ! LEVEL           [ reduce using rule 21 (Soption -> empty .) ]
  ! DRINK           [ reduce using rule 21 (Soption -> empty .) ]
  ! DONE            [ reduce using rule 21 (Soption -> empty .) ]
  ! MENU            [ reduce using rule 21 (Soption -> empty .) ]
  ! EXIT            [ reduce using rule 21 (Soption -> empty .) ]
  ! $end            [ reduce using rule 21 (Soption -> empty .) ]
  ! PERCENT         [ reduce using rule 24 (Ioption -> empty .) ]
  ! LEVEL           [ reduce using rule 24 (Ioption -> empty .) ]
  ! SIZE            [ reduce using rule 24 (Ioption -> empty .) ]
  ! DRINK           [ reduce using rule 24 (Ioption -> empty .) ]
  ! DONE            [ reduce using rule 24 (Ioption -> empty .) ]
  ! MENU            [ reduce using rule 24 (Ioption -> empty .) ]
  ! EXIT            [ reduce using rule 24 (Ioption -> empty .) ]
  ! $end            [ reduce using rule 24 (Ioption -> empty .) ]


state 30

    (10) option -> Doption quantity . size
    (16) size -> . SIZE
    (17) size -> . empty
    (32) empty -> .

    SIZE            shift and go to state 20
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)

    size                           shift and go to state 48
    empty                          shift and go to state 45

state 31

    (11) option -> Doption size . quantity
    (14) quantity -> . NUMBER
    (15) quantity -> . empty
    (32) empty -> .

    NUMBER          shift and go to state 16
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)

    quantity                       shift and go to state 49
    empty                          shift and go to state 50

state 32

    (15) quantity -> empty .
    (17) size -> empty .

  ! reduce/reduce conflict for DRINK resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for DONE resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for MENU resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for EXIT resolved using rule 15 (quantity -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 15 (quantity -> empty .)
    SIZE            reduce using rule 15 (quantity -> empty .)
    DRINK           reduce using rule 15 (quantity -> empty .)
    DONE            reduce using rule 15 (quantity -> empty .)
    MENU            reduce using rule 15 (quantity -> empty .)
    EXIT            reduce using rule 15 (quantity -> empty .)
    $end            reduce using rule 15 (quantity -> empty .)
    NUMBER          reduce using rule 17 (size -> empty .)

  ! DRINK           [ reduce using rule 17 (size -> empty .) ]
  ! DONE            [ reduce using rule 17 (size -> empty .) ]
  ! MENU            [ reduce using rule 17 (size -> empty .) ]
  ! EXIT            [ reduce using rule 17 (size -> empty .) ]
  ! $end            [ reduce using rule 17 (size -> empty .) ]


state 33

    (12) option -> size quantity . Doption
    (18) Doption -> . Soption Ioption
    (19) Doption -> . Ioption Soption
    (20) Soption -> . Slevel
    (21) Soption -> . empty
    (23) Ioption -> . Ilevel
    (24) Ioption -> . empty
    (22) Slevel -> . Setlevel SUGAR
    (32) empty -> .
    (25) Ilevel -> . Setlevel ICE
    (26) Setlevel -> . level
    (27) Setlevel -> . PERCENT
    (28) level -> . LEVEL

  ! shift/reduce conflict for PERCENT resolved as shift
  ! shift/reduce conflict for LEVEL resolved as shift
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)
    PERCENT         shift and go to state 25
    LEVEL           shift and go to state 26

  ! PERCENT         [ reduce using rule 32 (empty -> .) ]
  ! LEVEL           [ reduce using rule 32 (empty -> .) ]

    Doption                        shift and go to state 51
    Soption                        shift and go to state 18
    Ioption                        shift and go to state 19
    Slevel                         shift and go to state 21
    empty                          shift and go to state 47
    Ilevel                         shift and go to state 22
    Setlevel                       shift and go to state 23
    level                          shift and go to state 24

state 34

    (13) option -> size Doption . quantity
    (14) quantity -> . NUMBER
    (15) quantity -> . empty
    (32) empty -> .

    NUMBER          shift and go to state 16
    DRINK           reduce using rule 32 (empty -> .)
    DONE            reduce using rule 32 (empty -> .)
    MENU            reduce using rule 32 (empty -> .)
    EXIT            reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)

    quantity                       shift and go to state 52
    empty                          shift and go to state 50

state 35

    (15) quantity -> empty .
    (21) Soption -> empty .
    (24) Ioption -> empty .
